--- a/_modules/arc/species/conformers.html
+++ b/_modules/arc/species/conformers.html
@@ -1759,6 +1759,8 @@
                         <span class="n">rotor</span><span class="p">[</span><span class="s1">&#39;dimensions&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="mi">1</span>
                         <span class="n">rotor</span><span class="p">[</span><span class="s1">&#39;original_dihedrals&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="nb">list</span><span class="p">()</span>
                         <span class="n">rotor</span><span class="p">[</span><span class="s1">&#39;cont_indices&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="nb">list</span><span class="p">()</span>
+                        <span class="n">rotor</span><span class="p">[</span><span class="s1">&#39;symmetry&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
+                        <span class="n">rotor</span><span class="p">[</span><span class="s1">&#39;max_e&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
                         <span class="n">rotors</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">rotor</span><span class="p">)</span>
     <span class="k">return</span> <span class="n">rotors</span></div>
 
