--- a/genindex.html
+++ b/genindex.html
@@ -172,6 +172,7 @@
  | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
  | <a href="#G"><strong>G</strong></a>
+ | <a href="#H"><strong>H</strong></a>
  | <a href="#I"><strong>I</strong></a>
  | <a href="#J"><strong>J</strong></a>
  | <a href="#K"><strong>K</strong></a>
@@ -961,10 +962,10 @@
 </li>
       <li><a href="api/common.html#arc.common.get_git_commit">get_git_commit() (in module arc.common)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/local.html#arc.job.local.get_last_modified_time">get_last_modified_time() (in module arc.job.local)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/common.html#arc.common.get_logger">get_logger() (in module arc.common)</a>
 </li>
       <li><a href="api/conformers.html#arc.species.conformers.get_lowest_confs">get_lowest_confs() (in module arc.species.conformers)</a>
@@ -988,6 +989,8 @@
       <li><a href="api/common.html#arc.common.get_ordinal_indicator">get_ordinal_indicator() (in module arc.common)</a>
 </li>
       <li><a href="api/zmat.html#arc.species.zmat.get_parameter_from_atom_indices">get_parameter_from_atom_indices() (in module arc.species.zmat)</a>
+</li>
+      <li><a href="api/level.html#arc.level.get_params_from_arkane_level_of_theory_as_str">get_params_from_arkane_level_of_theory_as_str() (in module arc.level)</a>
 </li>
       <li><a href="api/reaction.html#arc.reaction.ARCReaction.get_products_xyz">get_products_xyz() (arc.reaction.ARCReaction method)</a>
 </li>
@@ -1040,12 +1043,22 @@
   </ul></td>
 </tr></table>
 
+<h2 id="H">H</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/converter.html#arc.species.converter.hartree_to_si">hartree_to_si() (in module arc.species.converter)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/converter.html#arc.species.converter.ics_to_scan_constraints">ics_to_scan_constraints() (in module arc.species.converter)</a>
 </li>
       <li><a href="api/conformers.html#arc.species.conformers.identify_chiral_nitrogen_centers">identify_chiral_nitrogen_centers() (in module arc.species.conformers)</a>
+</li>
+      <li><a href="api/parser.html#arc.parser.identify_ess">identify_ess() (in module arc.parser)</a>
 </li>
       <li><a href="api/species.html#arc.species.species.TSGuess.imaginary_freqs">imaginary_freqs (arc.species.species.TSGuess attribute)</a>
 </li>
@@ -1077,10 +1090,10 @@
 </li>
       <li><a href="api/conformers.html#arc.species.conformers.inverse_chirality_symbol">inverse_chirality_symbol() (in module arc.species.conformers)</a>
 </li>
-      <li><a href="api/species.html#arc.species.species.ARCSpecies.irc_label">irc_label (arc.species.species.ARCSpecies attribute)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/species.html#arc.species.species.ARCSpecies.irc_label">irc_label (arc.species.species.ARCSpecies attribute)</a>
+</li>
       <li><a href="api/main.html#arc.main.ARC.irc_level">irc_level (arc.main.ARC attribute)</a>
 
       <ul>
@@ -1622,6 +1635,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/converter.html#arc.species.converter.s_bonds_mol_from_xyz">s_bonds_mol_from_xyz() (in module arc.species.converter)</a>
 </li>
+      <li><a href="api/common.html#arc.common.safe_copy_file">safe_copy_file() (in module arc.common)</a>
+</li>
       <li><a href="api/plotter.html#arc.plotter.save_conformers_file">save_conformers_file() (in module arc.plotter)</a>
 </li>
       <li><a href="api/plotter.html#arc.plotter.save_geo">save_geo() (in module arc.plotter)</a>
@@ -1719,6 +1734,8 @@
       <li><a href="api/scheduler.html#arc.scheduler.species_has_sp">species_has_sp() (in module arc.scheduler)</a>
 </li>
       <li><a href="api/scheduler.html#arc.scheduler.Scheduler.species_list">species_list (arc.scheduler.Scheduler attribute)</a>
+</li>
+      <li><a href="api/converter.html#arc.species.converter.species_to_sdf_file">species_to_sdf_file() (in module arc.species.converter)</a>
 </li>
       <li><a href="api/main.html#arc.main.ARC.specific_job_type">specific_job_type (arc.main.ARC attribute)</a>
 </li>
@@ -1928,6 +1945,8 @@
 </li>
       <li><a href="api/converter.html#arc.species.converter.xyz_to_ase">xyz_to_ase() (in module arc.species.converter)</a>
 </li>
+      <li><a href="api/converter.html#arc.species.converter.xyz_to_coords_and_element_numbers">xyz_to_coords_and_element_numbers() (in module arc.species.converter)</a>
+</li>
       <li><a href="api/converter.html#arc.species.converter.xyz_to_coords_list">xyz_to_coords_list() (in module arc.species.converter)</a>
 </li>
       <li><a href="api/converter.html#arc.species.converter.xyz_to_dmat">xyz_to_dmat() (in module arc.species.converter)</a>
@@ -1943,6 +1962,8 @@
       <li><a href="api/converter.html#arc.species.converter.xyz_to_rmg_conformer">xyz_to_rmg_conformer() (in module arc.species.converter)</a>
 </li>
       <li><a href="api/converter.html#arc.species.converter.xyz_to_str">xyz_to_str() (in module arc.species.converter)</a>
+</li>
+      <li><a href="api/converter.html#arc.species.converter.xyz_to_turbomol_format">xyz_to_turbomol_format() (in module arc.species.converter)</a>
 </li>
       <li><a href="api/converter.html#arc.species.converter.xyz_to_x_y_z">xyz_to_x_y_z() (in module arc.species.converter)</a>
 </li>
