--- a/_modules/arc/job/local.html
+++ b/_modules/arc/job/local.html
@@ -191,6 +191,7 @@
 <div class="viewcode-block" id="execute_command"><a class="viewcode-back" href="../../../api/local.html#arc.job.local.execute_command">[docs]</a><span class="k">def</span> <span class="nf">execute_command</span><span class="p">(</span><span class="n">command</span><span class="p">:</span> <span class="n">Union</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">List</span><span class="p">[</span><span class="nb">str</span><span class="p">]],</span>
                     <span class="n">shell</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">True</span><span class="p">,</span>
                     <span class="n">no_fail</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">False</span><span class="p">,</span>
+                    <span class="n">executable</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">str</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
                     <span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Tuple</span><span class="p">[</span><span class="n">Optional</span><span class="p">[</span><span class="nb">list</span><span class="p">],</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">list</span><span class="p">]]:</span>
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Execute a command.</span>
@@ -203,6 +204,8 @@
 <span class="sd">        command (Union[str, List[str]]): An array of string commands to send.</span>
 <span class="sd">        shell (bool, optional): Specifies whether the command should be executed using bash instead of Python.</span>
 <span class="sd">        no_fail (bool, optional): If ``True`` then ARC will not crash if an error is encountered.</span>
+<span class="sd">        executable (str, optional): Select a specific shell to run with, e.g., &#39;/bin/bash&#39;.</span>
+<span class="sd">                                    Default shell of the subprocess command is &#39;/bin/sh&#39;.</span>
 
 <span class="sd">    Returns: Tuple[list, list]:</span>
 <span class="sd">        - A list of lines of standard output stream.</span>
@@ -216,7 +219,10 @@
     <span class="n">sleep_time</span> <span class="o">=</span> <span class="mi">60</span>  <span class="c1"># Seconds</span>
     <span class="k">while</span> <span class="n">i</span> <span class="o">&lt;</span> <span class="n">max_times_to_try</span><span class="p">:</span>
         <span class="k">try</span><span class="p">:</span>
-            <span class="n">completed_process</span> <span class="o">=</span> <span class="n">subprocess</span><span class="o">.</span><span class="n">run</span><span class="p">(</span><span class="n">command</span><span class="p">,</span> <span class="n">shell</span><span class="o">=</span><span class="n">shell</span><span class="p">,</span> <span class="n">capture_output</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
+            <span class="k">if</span> <span class="n">executable</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
+                <span class="n">completed_process</span> <span class="o">=</span> <span class="n">subprocess</span><span class="o">.</span><span class="n">run</span><span class="p">(</span><span class="n">command</span><span class="p">,</span> <span class="n">shell</span><span class="o">=</span><span class="n">shell</span><span class="p">,</span> <span class="n">capture_output</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
+            <span class="k">else</span><span class="p">:</span>
+                <span class="n">completed_process</span> <span class="o">=</span> <span class="n">subprocess</span><span class="o">.</span><span class="n">run</span><span class="p">(</span><span class="n">command</span><span class="p">,</span> <span class="n">shell</span><span class="o">=</span><span class="n">shell</span><span class="p">,</span> <span class="n">capture_output</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">executable</span><span class="o">=</span><span class="n">executable</span><span class="p">)</span>
             <span class="k">return</span> <span class="n">_format_stdout</span><span class="p">(</span><span class="n">completed_process</span><span class="o">.</span><span class="n">stdout</span><span class="p">),</span> <span class="n">_format_stdout</span><span class="p">(</span><span class="n">completed_process</span><span class="o">.</span><span class="n">stderr</span><span class="p">)</span>
         <span class="k">except</span> <span class="n">subprocess</span><span class="o">.</span><span class="n">CalledProcessError</span> <span class="k">as</span> <span class="n">e</span><span class="p">:</span>
             <span class="n">error</span> <span class="o">=</span> <span class="n">e</span>  <span class="c1"># Store the error so we can raise a SettingsError if needed.</span>
